# fast_zero

./: .gitignore  pyproject.toml  settings.py
fast_zero/: app.py  database.py
migrations/: env.py
migrations/versions/: 0e480a86d381_create_users_tablet.py  51f2af80e409_add_updated_at_field_to_users_table.py
tests/: conftest.py  test_app.py
