[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [{ name = "davidade300", email = "iaderinho@icloud.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["fastapi[standard] (>=0.116.1,<0.117.0)", "pydantic-settings (>=2.10.1,<3.0.0)", "sqlalchemy (>=2.0.43,<3.0.0)", "alembic (>=1.16.5,<2.0.0)", "dotenv (>=0.9.9,<0.10.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.10"

# configs globais ruff
[tool.ruff]
line-length = 79
extend-exclude = ['migrations'] #exclui a pasta migrations

# config de linter do ruff
[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

# config de formatter do ruff
[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "." # reconhece o caminho base para execucao de testes na raiz zdo projeto
addopts = '-p no:warnings' # suprime warnings

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'